--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Em homenagem à memória daqueles que partiram, este aplicativo é dedicado a construir um legado positivo. Ao controlar suas despesas, estamos celebrando a vida, cultivando relacionamentos e promovendo o bem-estar mental. Em solidariedade, lembramos aqueles que se foram e nos esforçamos para criar um futuro onde a compaixão e o apoio prevalecem. Juntos, podemos transformar cada gasto em uma oportunidade para construir algo duradouro."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Controlador - Finanças</title>
+    <title>Rastreador - Despesas</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
