--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Em homenagem à memória daqueles que partiram, este aplicativo é dedicado a construir um legado positivo. Ao controlar suas despesas, estamos celebrando a vida, cultivando relacionamentos e promovendo o bem-estar mental. Em solidariedade, lembramos aqueles que se foram e nos esforçamos para criar um futuro onde a compaixão e o apoio prevalecem. Juntos, podemos transformar cada gasto em uma oportunidade para construir algo duradouro."
+      content="Acompanhe suas despesas, cuide da sua saúde financeira e promova seu bem-estar emocional. Nosso aplicativo de rastreamento de despesas incentiva hábitos financeiros saudáveis, visando apoiar jovens na construção de um futuro financeiro mais estável. Juntos, podemos superar desafios e construir um caminho positivo. #SaúdeFinanceira #BemEstarEmocional"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
